Sat Mar  2 19:32:43 UTC 2013  Phil Mesnier  <mesnier_p@socket.net>

        * bin/tao_orb_tests.lst:

          Avoid running the Dynamic_TP/ORB_Loader test for static builds.

Fri Mar  1 20:17:57 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * NEWS:

          Added entry about ImR being interoperable with JacORB
          servers.

Fri Mar  1 19:15:40 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:

          Fix build problem when wide characters are enabled.

Fri Mar  1 16:54:37 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:
        * orbsvcs/tests/FT_Naming/FaultTolerant/Basic.cpp:
        * orbsvcs/tests/FT_Naming/FaultTolerant/LB_server.cpp:
        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:
        * orbsvcs/tests/FT_Naming/Load_Balancing/Basic.cpp:
        * orbsvcs/tests/FT_Naming/Load_Balancing/LB_server.cpp:

          Avoid memory leaks by placing object group reference
          returned from add_member and remove_member in an
          ObjectGroup_var to ensure it is cleaned up.

Fri Mar  1 15:30:10 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:

          Avoid conversion ambiguity on OpenVMS.

        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:

          Avoid compilation ambiguity regarding var type and [] operator.

        * orbsvcs/tests/FT_Naming/Load_Balancing/LB_server.cpp:

          Minor change in test. Unnecessary to allocate for 2 elements.

Fri Mar  1 15:02:34 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/server.cpp:

          Fix the spelling of the included file. Mac's apparently are case-
          insensitive when finding include files.

Thu Feb 28 23:49:27 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>
