@@ -1,3 +1,10 @@
+Mon Mar  4 21:24:45 UTC 2013  Byron Harris  <harrisb@ociweb.com>
+
+        * orbsvcs/tests/ImplRepo/RestartServer/Terminator.cpp:
+        * orbsvcs/tests/ImplRepo/servers_list/Terminator.cpp:
+
+          Fix so works properly for non-debug builds.
+
 Sat Mar  2 19:32:43 UTC 2013  Phil Mesnier  <mesnier_p@socket.net>
 
         * bin/tao_orb_tests.lst:
